<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, OurLittleGameActivity!</string>
    <string name="app_name">OurLittleGame</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="loginorsignup">Use your email to ~~sign-up~~ or ~~login~~</string>
    <string name="autopost">We won\'t auto-post to facebook</string>
	<string name="signup">Sign-up</string>
	<string name="login">Login</string>
	<string name="gender">Gender</string>
	<string name="partneremail">Partner Email</string>
	<string name="password">Password</string>
	<string name="email">Email</string>
	<string name="name">Name</string>    
	
	<string name="acknowledge">Acknowledge</string>
	<string name="message">Message</string>
	<string name="photo">Photo</string>
	<string name="compliment">Compliment</string>
</resources>
