<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/lightbackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:tileMode="repeat"
    android:weightSum="1" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/heading"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.3"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="20dip" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/backarrow" />

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="40dip" />
    </RelativeLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/toprounded_edittext"
            android:orientation="horizontal" >

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/email"
                android:textColor="#ccc" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="44dip"
                android:background="@android:color/transparent"
                android:padding="5dip"
                android:singleLine="true"
                android:text="tushar_ch@hotmail.com"
                android:textColor="#778BB0"
                android:textColorHint="#778BB0"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/bottomrounded_edittext"
            android:orientation="horizontal" >

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/password"
                android:textColor="#ccc" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="44dip"
                android:layout_marginTop="1dip"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:padding="5dip"
                android:singleLine="true"
                android:text="Testing123"
                android:textColor="#778BB0"
                android:textColorHint="#778BB0"
                android:textSize="14dip"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <Button
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button"
            style="@style/SplashButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/login" />

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="20dip"
            android:text=""
            android:textColor="@android:color/darker_gray"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>